fix issue too wide mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -477,7 +477,7 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
 
   @media (min-width: 798px) {
     display: none;
